--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #db configuration
-spring.datasource.url=jdbc:mysql://172.17.0.2:3306/api_adopet
+spring.datasource.url=jdbc:mysql://172.17.0.3:3306/adopet
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+server.port=9000
